test/parallel/taskPar/vass/const-due-to-task-intent-with-main.good
filename.chpl:17: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:16: note: The shadow variable 'DDD' is constant due to task intents in this begin statement
filename.chpl:19: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:18: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:20: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:18: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:23: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:22: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:27: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:26: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:31: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:30: note: The shadow variable 'DDD' is constant due to task intents in this begin statement
filename.chpl:35: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:32: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:39: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:32: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:44: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:41: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:49: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:47: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:53: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:51: note: The shadow variable 'DDD' is constant due to task intents in this begin statement
filename.chpl:58: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:55: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:61: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:55: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:67: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:64: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:75: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:73: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:80: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:79: note: The shadow variable 'DDD' is constant due to task intents in this begin statement
filename.chpl:86: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:82: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:92: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:82: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:99: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:95: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
filename.chpl:108: error: const actual is passed to 'ref' formal 'a' of =
filename.chpl:105: note: The shadow variable 'DDD' is constant due to task intents in this parallel statement
